[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://MotivationIntEnjoy.gd" type="Script" id=2]

[node name="MotivationIntEnjoy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 562.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q1" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 333.0
margin_bottom = 14.0
text = "I enjoyed doing this activity very much."

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 34.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider1" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 38.0
margin_right = 333.0
margin_bottom = 69.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"

[node name="Q2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 73.0
margin_right = 333.0
margin_bottom = 87.0
text = "This activity was fun to do."

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 91.0
margin_right = 333.0
margin_bottom = 107.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider2" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 111.0
margin_right = 333.0
margin_bottom = 142.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"

[node name="Q3" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 146.0
margin_right = 333.0
margin_bottom = 160.0
text = "I thought this was a boring activity."

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 164.0
margin_right = 333.0
margin_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider3" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 184.0
margin_right = 333.0
margin_bottom = 215.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"

[node name="Q4" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 219.0
margin_right = 333.0
margin_bottom = 233.0
text = "This activity did not hold my attention at all."

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 237.0
margin_right = 333.0
margin_bottom = 253.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider4" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer8" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 257.0
margin_right = 333.0
margin_bottom = 288.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"

[node name="Q5" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 292.0
margin_right = 333.0
margin_bottom = 306.0
text = "I would describe this activity as very interesting."

[node name="HBoxContainer9" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 310.0
margin_right = 333.0
margin_bottom = 326.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider5" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer10" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 330.0
margin_right = 333.0
margin_bottom = 361.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"

[node name="HBoxContainer11" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 365.0
margin_right = 333.0
margin_bottom = 385.0
alignment = 1

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 122.0
margin_right = 164.0
margin_bottom = 20.0
text = "Back"

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 168.0
margin_right = 210.0
margin_bottom = 20.0
text = "Next"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer2/HSlider1" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer5/HSlider3" to="." method="_on_HSlider3_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer7/HSlider4" to="." method="_on_HSlider4_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer9/HSlider5" to="." method="_on_HSlider5_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer11/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer11/Button" to="." method="_on_Button_button_up"]
